# slack-adk-agent

./: README.md
.agents/: .acli_skills_check  .acli_update_check  .skill-lock.json
.agents/skills/google-agents-cli-deploy/: SKILL.md
.agents/skills/google-agents-cli-eval/: SKILL.md
.agents/skills/google-agents-cli-observability/: SKILL.md
.agents/skills/google-agents-cli-publish/: SKILL.md
.agents/skills/google-agents-cli-scaffold/: SKILL.md
caa-agent/: .env.example  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
caa-agent/app/: agent.py  fast_api_app.py
caa-agent/app/app_utils/: telemetry.py  (+1 more)
knowledge-agent/: .env.example  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
knowledge-agent/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
knowledge-agent/app/: agent.py  fast_api_app.py  prompts.py
slack-agent/: .env.example  .gitignore  GEMINI.md  README.md  agents-cli-manifest.yaml  deployment_metadata.json  opentelemetry.env  pyproject.toml
slack-agent/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
slack-agent/app/: agent.py  fast_api_app.py  prompts.py
slack-root-agent/: .env.sample  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
slack-root-agent/slack_root/: __init__.py  agent.py  prompts.py
t2s-agent/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
t2s-agent/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
t2s-agent/app/: agent.py  fast_api_app.py  prompts.py
(+26 files in other folders)
