[project]
name = "slack-root-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk[a2a,gcp,slack]>=2.4.0",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0",
    "opentelemetry-exporter-gcp-monitoring>=1.12.0a0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-sqlite3>=0.63b1",
    "opentelemetry-instrumentation-vertexai>=0.62.1",
    "python-dotenv>=1.2.2",
    "slack-bolt>=1.29.0",
]
